--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Summary of important user-visible changes for Bio-DB-SwissProt
 --------------------------------------------------------------
 
 {{$NEXT}}
+  * Fixes for issues related to using Bio::Root::Test (issue #3) 
 
 1.7.3     2019-11-27 18:56:08-06:00 America/Chicago
   * First release after split from bioperl-live.
